src/styles/styles.scss
@use "./fonts" as *;
@use "./variables" as *;

html,
body {
  font-family: "Roboto";
  margin: 0;
  padding: 0;
}

* {
  box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
figure,
pre {
  margin: 0;
}

.container {
  min-width: 100vw;
  min-height: 100vh;
  padding: 0 $container-padding $space-xxl $container-padding;
  background-color: $color-bg;
  overflow: hidden;
}

